--- a/homework/src/app/product/create-product/create-product.component.html
+++ b/homework/src/app/product/create-product/create-product.component.html
@@ -16,5 +16,6 @@
     <label for="description" class="form-label">Description</label>
     <input type="text" class="form-control w-50" id="description" name="description" ngModel>
   </div>
-  <button class="btn btn-primary" >Submit</button>
+  <button class="btn btn-success" >Submit</button>
+  <button class="btn btn-secondary" (click)="closeCreateForm()">Close</button>
 </form>
