--- a/angular-product-management/src/app/product/product-detail/product-detail.component.html
+++ b/angular-product-management/src/app/product/product-detail/product-detail.component.html
@@ -1,5 +1,5 @@
-<h1>Tạo sản phẩm mới</h1>
-<form [formGroup]="productForm" (ngSubmit)="submit()">
+<h1>Cập nhật sản phẩm</h1>
+<form [formGroup]="productForm" (ngSubmit)="edit()">
   <table>
     <tr>
       <td>Tên sản phẩm:</td>
@@ -15,7 +15,7 @@
     </tr>
     <tr>
       <td></td>
-      <td><button>Tạo mới</button></td>
+      <td><button>Cập nhật</button></td>
     </tr>
   </table>
 </form>
