--- a/angular-product-management/src/app/product/product-delete/product-delete.component.html
+++ b/angular-product-management/src/app/product/product-delete/product-delete.component.html
@@ -16,5 +16,5 @@
     <td>Description:</td>
     <td>{{product.description}}</td>
   </tr>
-  <button><a routerLink="/product/list" (click)="deleteProduct(product.id)">Xoá</a></button>
+  <button><a routerLink="/products/list" (click)="deleteProduct(product.id)">Xoá</a></button>
 </table>
