--- a/angular-product-management/src/app/app.component.html
+++ b/angular-product-management/src/app/app.component.html
@@ -1,2 +1,9 @@
-<a routerLink="/product/list">Danh sách sản phẩm</a>|<a routerLink="/product/create">Tạo mới sản phẩm</a>
-<router-outlet></router-outlet>
+<div class="app-container app-theme-white body-tabs-shadow fixed-sidebar fixed-header">
+  <app-navbar></app-navbar>
+  <div class="app-main">
+    <app-sidebar></app-sidebar>
+    <div class="app-main__outer">
+      <router-outlet></router-outlet>
+    </div>
+  </div>
+</div>
