--- a/angular-product-management/src/app/product/product-list/product-list.component.html
+++ b/angular-product-management/src/app/product/product-list/product-list.component.html
@@ -10,10 +10,10 @@
   </tr>
   <tr *ngFor="let product of products">
     <td>{{product.id}}</td>
-    <td><a routerLink="/product/{{product.id}}">{{product.name}}</a> </td>
+    <td><a routerLink="/products/{{product.id}}">{{product.name}}</a> </td>
     <td>{{product.price}}</td>
     <td>{{product.category.name}}</td>
     <td>{{product.description}}</td>
-    <td><a routerLink="/product/delete/{{product.id}}">Xoá</a></td>
+    <td><a routerLink="/products/delete/{{product.id}}">Xoá</a></td>
   </tr>
 </table>
