--- a/angular-product-management/src/app/app.component.html
+++ b/angular-product-management/src/app/app.component.html
@@ -3,7 +3,9 @@
   <div class="app-main">
     <app-sidebar></app-sidebar>
     <div class="app-main__outer">
-      <router-outlet></router-outlet>
+      <div class="app-main__inner">
+        <router-outlet></router-outlet>
+      </div>
     </div>
   </div>
 </div>
