--- a/angular-product-management/src/app/shared/navbar/navbar.component.html
+++ b/angular-product-management/src/app/shared/navbar/navbar.component.html
@@ -103,7 +103,7 @@
               </div>
             </div>
             <div class="widget-content-right header-user-info ml-3">
-              <button type="button" class="btn-shadow p-1 btn btn-primary btn-sm show-toastr-example">
+              <button type="button" class="btn-shadow p-1 btn btn-primary btn-sm">
                 <i class="fa text-white fa-sign-out-alt pr-1 pl-1" (click)="logout()"></i>
               </button>
             </div>
