--- a/angular-product-management/src/app/product/product-delete/product-delete.component.html
+++ b/angular-product-management/src/app/product/product-delete/product-delete.component.html
@@ -27,6 +27,9 @@
       <div class="position-relative row form-group"><label class="col-sm-2 col-form-label">Description</label>
         <div class="col-sm-10">{{product.description}}</div>
       </div>
+    <div class="position-relative row form-group"><label class="col-sm-2 col-form-label">Image</label>
+      <div class="col-sm-10"><img src="{{product.imgURL}}" style="width: 50%;"></div>
+    </div>
       <div class="position-relative row form-check">
         <div class="col-sm-10 offset-sm-2">
           <a class="btn btn-danger" routerLink="/products/list" (click)="deleteProduct(product.id)" style="margin-left: -20px">Delete</a>
