--- a/angular-product-management/src/app/product/product-detail/product-detail.component.html
+++ b/angular-product-management/src/app/product/product-detail/product-detail.component.html
@@ -29,10 +29,18 @@
         </select>
         </div>
       </div>
-      <div class="position-relative row form-group"><label for="description"
-                                                           class="col-sm-2 col-form-label">Description</label>
-        <div class="col-sm-10"><textarea id="description" type="text" formControlName="description"
-                                         class="form-control"></textarea></div>
+      <div class="position-relative row form-group">
+        <label for="description" class="col-sm-2 col-form-label">Description</label>
+        <div class="col-sm-10">
+          <textarea id="description" type="text" formControlName="description"
+                    class="form-control"></textarea>
+        </div>
+      </div>
+      <div class="position-relative row form-group"><label for="image" class="col-sm-2 col-form-label">image</label>
+        <div class="col-sm-10">
+          <input id="image" type="file" #preview (change)="showPreview($event)" class="form-control">
+          <img style="width: 50%" [src]="imgSrc" (click)="preview.click()">
+        </div>
       </div>
       <div class="position-relative row form-check">
         <div class="col-sm-10 offset-sm-2">
