--- a/angular-product-management/src/app/shared/sidebar/sidebar.component.html
+++ b/angular-product-management/src/app/shared/sidebar/sidebar.component.html
@@ -33,7 +33,7 @@
     <ul class="vertical-nav-menu">
       <li class="app-sidebar__heading">Dashboards</li>
       <li>
-        <a href="index.html" class="mm-active">
+        <a href="index.html" class="mm-active" routerLink="/products/list">
           <i class="metismenu-icon pe-7s-rocket"></i>
           Product Manager
         </a>
