--- a/angular-exam/src/app/book/book-delete/book-delete.component.html
+++ b/angular-exam/src/app/book/book-delete/book-delete.component.html
@@ -6,7 +6,7 @@
         </i>
       </div>
       <div>Delete Book
-        <div class="page-title-subheading">Additional details of product
+        <div class="page-title-subheading">Additional details of book
         </div>
       </div>
     </div>
