--- a/angular-exam/src/app/shared/sidebar/sidebar.component.html
+++ b/angular-exam/src/app/shared/sidebar/sidebar.component.html
@@ -35,7 +35,7 @@
       <li>
         <a href="index.html" class="mm-active" routerLink="/products/list">
           <i class="metismenu-icon pe-7s-rocket"></i>
-          Product Manager
+          Book Manager
         </a>
       </li>
     </ul>
